@@ -15,6 +15,7 @@ Jump Start Changelog
 * Added option to change thumbnail highlight icon color, for all theme bases.
 * Added "video" class that can be used in WordPress menu builder to link to a YouTube or Vimeo video in lightbox.
 * Allow mobile menu to be filtered to appear from left.
+* Minified theme.js, theme-rtl.js, and dark.css assets.
 * Fixed: Only load Nivo script if Theme Blvd Sliders plugin is installed.
 * Fixed: Animation of hiding mobile menu with RTL languages.
 * Fixed: Inconsistencies with Bootstrap responsive breakpoints, down to the pixel.
